vertical spacing fixes and button fixes

--- a/css/type.css
+++ b/css/type.css
@@ -16,7 +16,12 @@ h1, h2, h3, h4, h5, h6, hgroup,
 ul, ol, dd,
 p, figure,
 pre, table, fieldset, hr,
-section, article {
+section, article,
+button, input,
+.button,
+.button-primary,
+textarea,
+select {
   -webkit-margin-after: 0;
   -webkit-margin-before: 0;
   -webkit-margin-end: 0;
@@ -52,10 +57,12 @@ footer {
   #container {
     width: 75%;
     max-width: 68rem; } }
+html {
+  font-size: 16px; }
+
 body {
   font-weight: 400;
   font-family: "Droid Serif", Georgia, Cambria, "Times New Roman", Times, serif;
-  font-size: 16px;
   line-height: 1.5;
   color: #444;
   overflow-y: scroll; }
@@ -158,7 +165,7 @@ code {
   flex: 0 0 auto;
   margin-right: 0.25rem;
   margin-left: 0.25rem;
-  margin-top: 0.25rem;
+  margin-bottom: 0.5rem;
   -ms-flex-preferred-size: 100%;
   flex-basis: 100%;
   max-width: 100%; }
@@ -400,9 +407,9 @@ input[type="button"] {
   cursor: pointer;
   display: inline-block;
   font-family: "Droid Serif", Georgia, Cambria, "Times New Roman", Times, serif;
+  font-size: 100%;
   line-height: 1.5;
   margin-right: 0.25em;
-  margin-top: 0.25em;
   padding: 0.5em 2em 0.5em 2em;
   text-align: center;
   text-decoration: none; }
@@ -434,9 +441,9 @@ input[type="button"].button-primary {
   cursor: pointer;
   display: inline-block;
   font-family: "Droid Serif", Georgia, Cambria, "Times New Roman", Times, serif;
+  font-size: 100%;
   line-height: 1.5;
   margin-right: 0.25em;
-  margin-top: 0.25em;
   padding: 0.5em 2em 0.5em 2em;
   text-align: center;
   text-decoration: none; }
